# portfolio

./: .env.example  .gitignore  Makefile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py
backend/app/: config.py  database.py  main.py  seed.py
backend/app/models/: project.py
backend/app/routers/: projects.py
backend/app/schemas/: __init__.py  project.py
caddy/: Caddyfile.dev  Caddyfile.prod
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: About.tsx  Contact.tsx  Footer.tsx  Header.tsx  Hero.tsx  Logo.tsx  ParallaxBackground.tsx  ParallaxSection.tsx  ProjectCard.tsx  ProjectVisual.tsx  Projects.tsx  ScrollProgress.tsx
frontend/src/components/ui/: parallax-floating.tsx
frontend/src/hooks/: useProjects.ts  useScrollAnimation.ts
